// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`heading.md all off processor: heading.md 1`] = `
# abc123

# 我1我a


## abc123

## 我1我a


### abc123

### 我1我a


#### abc123

#### 我1我a


##### abc123

##### 我1我a


###### abc123

###### 我1我a



~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# abc123

# 我 1 我 a

## abc123

## 我 1 我 a

### abc123

### 我 1 我 a

#### abc123

#### 我 1 我 a

##### abc123

##### 我 1 我 a

###### abc123

###### 我 1 我 a

`;

exports[`heading.md all off processor: heading.md 2`] = `
# abc123

# 我1我a


## abc123

## 我1我a


### abc123

### 我1我a


#### abc123

#### 我1我a


##### abc123

##### 我1我a


###### abc123

###### 我1我a



~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# abc123

# 我 1 我 a

## abc123

## 我 1 我 a

### abc123

### 我 1 我 a

#### abc123

#### 我 1 我 a

##### abc123

##### 我 1 我 a

###### abc123

###### 我 1 我 a

`;

exports[`heading.md: heading.md 1`] = `
# abc123

# 我1我a


## abc123

## 我1我a


### abc123

### 我1我a


#### abc123

#### 我1我a


##### abc123

##### 我1我a


###### abc123

###### 我1我a



~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# abc123

# 我 1 我 a

## abc123

## 我 1 我 a

### abc123

### 我 1 我 a

#### abc123

#### 我 1 我 a

##### abc123

##### 我 1 我 a

###### abc123

###### 我 1 我 a

`;

exports[`heading.md: heading.md 2`] = `
# abc123

# 我1我a


## abc123

## 我1我a


### abc123

### 我1我a


#### abc123

#### 我1我a


##### abc123

##### 我1我a


###### abc123

###### 我1我a



~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# abc123

# 我1我a

## abc123

## 我1我a

### abc123

### 我1我a

#### abc123

#### 我1我a

##### abc123

##### 我1我a

###### abc123

###### 我1我a

`;
